apps/snapdrop/base/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snapdrop
  labels:
    app: snapdrop
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: snapdrop
  template:
    metadata:
      labels:
        app: snapdrop
    spec:
      containers:
        - name: snapdrop
          image: lscr.io/linuxserver/snapdrop:eac78009-ls129@sha256:21b1d4c9e45ea6e32d5be97c4846b6fdaad846d0e3f6e1d0eb38b4e5c29946e6
          resources:
            requests:
              memory: "56Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - containerPort: 80
            - containerPort: 443
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
