apps/snapdrop/base/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snapdrop
spec:
  type: ClusterIP
  selector:
    app: snapdrop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
