apps/snapdrop/base/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snapdrop-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: internal-nginx
  tls:
    - hosts:
        - drop.nahue.ar
      secretName: snapdrop
  rules:
    - host: drop.nahue.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: snapdrop
                port:
                  number: 80
